--- a/variables.css
+++ b/variables.css
@@ -30,8 +30,8 @@
   --gra-lightSlateBlue: hsl(252, 100%, 67%); /* Background */
   --gra-lightRoyalBlue: hsl(241, 81%, 54%); /* Background */
 
-  --gra-violetBlue: hsl(256, 72%, 46%, 1); /* Circle */
-  --gra-persianBlue: hsl(241%, 72%, 46%, 0); /* Circle */
+  --gra-violetBlue: hsla(256, 72%, 46%, 1); /* Circle */
+  --gra-persianBlue: hsla(241, 72%, 46%, 0); /* Circle */
 
   /* Neutral Colours */
   --clr-white: hsl(0, 0%, 100%);
