--- a/style.css
+++ b/style.css
@@ -55,30 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 } 
 
 
-@media (min-width:600px){
-  body{
-    min-height:100vh;
-    display:grid;
-    place-items: center;
-    background-color: var(--clr-paleBlue);
-  }
 
-  .main-section{
-    grid-template-columns: 1fr 1fr;
-    border-radius: 2rem;
-    box-shadow: .5rem 1rem 3rem rgba(0,0,0,.1);
-    overflow: hidden;
-    margin-inline:1rem ;
-    background-color: var(--clr-white);
-    
-  
-  }
-  .results-section{
-    border-radius: 2rem ;
-    
-  }
-
-}
 
  body {
   font-family: var( --fs-base);
@@ -102,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
   background: linear-gradient(var(--gra-lightSlateBlue),var(--gra-lightRoyalBlue));
   text-align: center;
   color: var(--clr-lightLavender);
-  border-radius: 0 2rem 2rem 2rem;
+  border-radius: 0 0 2rem 2rem;
 
 }
 .summary-section{
@@ -197,7 +174,30 @@ h1, h2, h3, h4, h5, h6 {
 .button:hover , .button:focus-visible{
   background: linear-gradient(var(--gra-lightSlateBlue),var(--gra-lightRoyalBlue));
 }
+@media (min-width:600px){
+  body{
+    min-height:100vh;
+    display:grid;
+    place-items: center;
+    background-color: var(--clr-paleBlue);
+  }
 
+  .main-section{
+    grid-template-columns: 1fr 1fr;
+    border-radius: 2rem;
+    box-shadow: .5rem 1rem 3rem rgba(0,0,0,.1);
+    overflow: hidden;
+    margin-inline:1rem ;
+    background-color: var(--clr-white);
+    
+  
+  }
+  .results-section{
+    border-radius: 2rem ;
+    
+  }
+
+}
 
 /** Attribution CSS **/
 .attribution { font-size: 11px; text-align: center; }
