--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
 .score span{
   display: block;
   font-size: 5rem;
-  font-weight: 800;
+  font-weight: var(--fw-black);
   line-height: 1;
   color: var(--clr-paleBlue);
 }
